<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share">Поделиться</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="icon_back" translatable="false">Иконка назад</string>
    <string name="icon_share" translatable="false">Иконка поделиться</string>
    <string name="icon_support" translatable="false">Иконка поддержка</string>
    <string name="icon_arrow_forward" translatable="false">Иконка стрелка вперед</string>
</resources>